--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ body{
   background-image:url("../images/dark_embroidery.png");
 }
 
+p{
+  color: white;
+  font-family: 'Libre Baskerville', serif;
+}
+
 button{
   padding: 5px;
   margin: 25px 10px;
@@ -11,15 +16,6 @@ button{
 
 img:hover{
   opacity: .8;
-}
-.item{
-  float:left;
-  margin: 10px;
-}
-
-.btnGrp{
- float:left;
- margin: 10px;
 }
 
 form, input{
@@ -33,8 +29,18 @@ label{
  font-size: 18px;
 }
 
+.gDiv{
+  float:left;
+  margin: 10px;
+}
+
+.btnGrp{
+ float:left;
+ margin: 10px;
+}
+
 .delete{
-  background-color:lightgrey;
+  background-color:grey;
   color:white;
 }
 
@@ -42,25 +48,25 @@ label{
   background-color:darkgrey;
 }
 
-.select{
+.topicBtn{
   background-color: mediumturquoise;
   font-family: 'Libre Baskerville', serif;
   font-weight:bold;
 }
 
-#add-Topic:hover, .select:hover{
+.topicBtn:hover, #add-topic:hover{
   background-color:cyan;
 }
 
-#add-Topic{
+#add-topic{
   margin-top: 10px;
   background-color: mediumturquoise;
   font-family: 'Libre Baskerville', serif;
   font-weight:bold;
 }
 
-#topic-input:focus{
-  background-color:lightyellow;
+#user-input:focus{
+  background-color:khaki;
 }
 
 #title{
@@ -77,7 +83,3 @@ label{
  padding-top: 10px;
 }
 
-p{
-  color: white;
-  font-family: 'Libre Baskerville', serif;
-}
